--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kalibrator"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Stefan Müller <s.mueller@it.kls-glt.de>"]
 description = "Kalibrator Software für die CO/NO2 Kombisensoren mit Modbus Interface"
 documentation = "https://gaswarnanlagen.com/xmz-mod-touch"
@@ -15,3 +15,4 @@ gdk = { version = "0.5.0" }
 glib = "*"
 libc = "*"
 gio = "^0"
+libmodbus-rs = { git = "https://github.com/zzeroo/libmodbus-rs.git" }
