--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,13 @@ license = "GPL-2.0"
 build = "build.rs"
 
 [dependencies]
-gtk = { version = "0.1.0", features = ["v3_16"] }
 gdk = { version = "0.5.0" }
-glib = "*"
-libc = "*"
 gio = "^0"
+glib = "*"
+glib-sys = "*"
+gobject-sys = "*"
+gtk = { version = "0.1.0", features = ["v3_16"] }
+gtk-sys = "*"
+libc = "*"
 libmodbus-rs = { version = "0.3.1", git = "https://github.com/zzeroo/libmodbus-rs.git" }
 xmz_server = { git = "https://github.com/Kliemann-Service-GmbH/xMZ-Mod-Touch-Server.git", branch = "development" }
